--- a/templates/abhay.html
+++ b/templates/abhay.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="author" content="Abhay Kumar">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Home Page</title>
 
 </head>
