--- a/templates/abhay.html
+++ b/templates/abhay.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href=" {{ url_for('templates' , filename='science-videos.html') }}" target="_blank"><button class="button" type="button"> science related videos.</button></a>
+    <a href=" {{ url_for('science-videos') }}" target="_blank"><button class="button" type="button"> science related videos.</button></a>
     <h1>Welcome to this page!</h1>
     <p>This page will be about science and science related stuff.</p>
     <hr>
