changed the content of the home page

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
         
         }
         body {
-            
+            background-color: antiquewhite;
             font-size: 20px; 
         }
         </style>
