--- a/templates/ascent-of-man.html
+++ b/templates/ascent-of-man.html
@@ -26,6 +26,17 @@
         
 
         }
+        blockquote {
+            margin-top: 100px;
+            margin-left: 20px;
+            margin-bottom: 100px;
+        }
+        body {
+            background-color: antiquewhite;
+        }
+        iframe {
+            margin-right: 25px;
+        }
         </style>
 
 </head>
@@ -39,7 +50,7 @@
         <a href="cosmos.html"> <button type="button" class="navbutton">cosmos</button></a>
         <a href="math.html"> <button type="button" class="navbutton">Maths</button></a>
     </nav>
-    <blockquote cite="Ascent of Man">Science is a very human form of knowlege. We are always at the brink of the known, we always feel forward for what is to be hoped. Every judgement in science stands on the edge of error and is personal. Science is a tribute to what we can know although we are fallible.</blockquote>
+    <blockquote cite="Ascent of Man">Science is a very human form of knowlege. We are always at the brink of the known, we always feel forward for what is to be hoped. Every judgement in science stands on the edge of error and is personal. Science is a tribute to what we can know although we are fallible. -- JACOB BRONOWSKI </blockquote>
 
     <div>
 
