--- a/templates/home.html
+++ b/templates/home.html
@@ -26,14 +26,19 @@
 
         }
         p{
-            margin-top: 100px;
-            margin-left: 22px;
+
+        
             
             font-style: normal;
             font-family: cursive;
         }
         body {
             background-color: antiquewhite;
+        }
+        h2 {
+            text-align:center;
+            
+            
         }
     </style>
 </head>
@@ -47,9 +52,9 @@
     <a href="math.html"> <button type="button" class="navbutton">Maths</button></a>
 </nav>
 <hr>
-<p>Welcome to this web page. This web page is about science and science related stuff. I will also be sharing some scientific documentaries. </p>
 <h2>Science</h2>
-<p>Science is a way of collecting and creating knowledge. The tools of science help us to interrogate nature in a way that is reliable and efficient. Although science itself has its limitations, we have yet to see any approach that can make predictions as good as the scientific method. Science requires some basic assumptions about the world in order to predict some results. For example one of these implicit assumptions is that the laws of nature do not change abruplty. Indeed if the laws were to change in an unknown manner, then there would have been no point in doing science. Because then none of our results would be valid for a long time and thus we could not do anthing meaningful with it. Thus this stability of the laws of nature is essential for the existence of science. In your study of science surely you would have come across many assumptions, conventions and simplifications in order to study a process. That is because these things help us to arrive at some results that we can work with.  </p>
+<p>Science is a way of collecting and creating knowledge. The tools of science help us to interrogate nature in a way that is reliable and efficient. 
+    Although science itself has its limitations, we have yet to see any approach that can make predictions as good as the scientific method. Science requires some basic assumptions about the world in order to predict some results. For example one of these implicit assumptions is that the laws of nature do not change abruplty. Indeed if the laws were to change in an unknown manner, then there would have been no point in doing science. Because then none of our results would be valid for a long time and thus we could not do anthing meaningful with it. Thus this stability of the laws of nature is essential for the existence of science. In your study of science surely you would have come across many assumptions, conventions and simplifications in order to study a process. That is because these things help us to arrive at some results that we can work with.  </p>
 </body>
 
 </html>
