added route for the other pages and modified the content of the cosmos page

--- a/templates/cosmos.html
+++ b/templates/cosmos.html
@@ -8,7 +8,7 @@
     <style>
         nav { 
             
-            margin-left:290px;
+            margin-left:340px;
         
         }
         .navbutton {
@@ -25,6 +25,27 @@
         
 
         }
+
+        body {
+            background-color: antiquewhite;
+        }
+
+        iframe {
+            margin-left: 50px;
+            margin-top: 50px;
+            margin-right: 50px;
+        }
+        
+        h2 {
+            text-align: center;
+        }
+
+        p {
+            margin-top: 100px;
+            margin-left: 20px;
+            margin-right: 20px;
+            font-size: larger;
+        }
         </style>
 
     <body>
@@ -35,9 +56,40 @@
             <a href="cosmos.html"> <button type="button" class="navbutton">cosmos</button></a>
             <a href="math.html"> <button type="button" class="navbutton">Maths</button></a>
         </nav>
-        <li>
-            These are from Carl Sagan's Cosmos.
-            <p></p>
+        <p> We were wanderers from the beginning. We knew every stand of tree for a hundred miles.
+            When the fruits or nuts were ripe, we were there. We followed the herds in their annual
+            migrations. We rejoiced in fresh meat. through stealth, feint, ambush, and main-force assault, a
+            few of us cooperating accomplished what many of us, each hunting alone, could not. We
+            depended on one another. Making it on our own was as ludicrous to imagine as was settling
+            down.
+            Working together, we protected our children from the lions and the hyenas. We taught them
+            the skills they would need. And the tools. Then, as now, technology was the key to our survival.
+            When the drought was prolonged, or when an unsettling chill lingered in the summer air, our
+            group moved on—sometimes to unknown lands. We sought a better place. And when we couldn't
+            get on with the others in our little nomadic band, we left to find a more friendly bunch
+            somewhere else. We could always begin again.
+            For 99.9 percent of the time since our species came to be, we were hunters and foragers,
+            wanderers on the savannahs and the steppes. There were no border guards then, no customs
+            officials. The frontier was everywhere. We were bounded only by the Earth and the ocean and the
+            sky—plus occasional grumpy neighbors.
+            When the climate was congenial, though, when the food was plentiful, we were willing to
+            stay put. Unadventurous. Overweight. Careless. In the last ten thousand years—an instant in our
+            long history— we've abandoned the nomadic fife. We've domesticated the plants and animals.
+            Why chase the food when you can make it come to you?
+            For all its material advantages, the sedentary life has left us edgy, unfulfilled. Even after 400
+            generations in villages and cities, we haven't forgotten. The open road still softly calls, like a
+            nearly forgotten song of childhood. We invest far-off places with a certain romance. This appeal,
+            I suspect, has been meticulously crafted by natural selection as an essential element in our
+            survival. Long summers, mild winters, rich harvests, plentiful game—none of them lasts forever.
+            It is beyond our powers to predict the future. Catastrophic events have a way of sneaking up on
+            us, of catching us unaware. Your own life, or your band's, or even your species' might be owed to
+            a restless few—drawn, by a craving they can hardly articulate or understand, to undiscovered
+            lands and new worlds.
+            Herman Melville, in Moby Dick, spoke for wanderers in all epochs and meridians: "I am
+            tormented with an everlasting itch for things remote. I love to sail forbidden seas . . ."</p>
+            <p style="margin-left: 900px; margin-top: 50px;">....Carl Sagan , Pale Blue Dot.</p>
+           <h2> These are from Carl Sagan's cosmos.</h2>
+        
             <div>
         
                 <iframe width="450" height="250" src="https://www.youtube.com/embed/J1cNaFG1VII" frameborder="0"
@@ -60,6 +112,6 @@
                     allowfullscreen></iframe>
         
             </div>
-        </li>
+        
     </body>
 </html>
