Changed the quote from the ascent of man page

--- a/templates/ascent-of-man.html
+++ b/templates/ascent-of-man.html
@@ -29,13 +29,19 @@
         blockquote {
             margin-top: 100px;
             margin-left: 20px;
-            margin-bottom: 100px;
+            margin-bottom: 50px;
+            font-size: larger;
         }
         body {
             background-color: antiquewhite;
         }
         iframe {
             margin-right: 25px;
+        }
+
+        p {
+            margin-left: 900px;
+            font-size: larger;
         }
         </style>
 
@@ -50,8 +56,8 @@
         <a href="cosmos.html"> <button type="button" class="navbutton">cosmos</button></a>
         <a href="math.html"> <button type="button" class="navbutton">Maths</button></a>
     </nav>
-    <blockquote cite="Ascent of Man">Science is a very human form of knowlege. We are always at the brink of the known, we always feel forward for what is to be hoped. Every judgement in science stands on the edge of error and is personal. Science is a tribute to what we can know although we are fallible. -- JACOB BRONOWSKI </blockquote>
-
+    <blockquote cite="Ascent of Man">There are two parts to the human dilemma. One is the belief that the end justifies the means. That pushbutton order, that deleberate deafness to the human suffering has become the monster in the war machine. The other is the betrayel of the human spirit. The assertion of dogma that closes the mind and turns a nation, a civilization into a regiment of ghosts. Obedient ghosts or tortured ghosts. </blockquote>
+    <p>.......Jacob Bronowski , Ascent of Man.</p>
     <div>
 
         <iframe width="450" height="250" src="https://www.youtube.com/embed/F2kiAF1GL9M" frameborder="0"
