--- a/templates/ascent-of-man.html
+++ b/templates/ascent-of-man.html
@@ -42,6 +42,12 @@
         p {
             margin-left: 900px;
             font-size: larger;
+            
+        }
+
+        h2 {
+            margin-top: 100px;
+            text-align: center;
         }
         </style>
 
@@ -58,6 +64,8 @@
     </nav>
     <blockquote cite="Ascent of Man">There are two parts to the human dilemma. One is the belief that the end justifies the means. That pushbutton order, that deleberate deafness to the human suffering has become the monster in the war machine. The other is the betrayel of the human spirit. The assertion of dogma that closes the mind and turns a nation, a civilization into a regiment of ghosts. Obedient ghosts or tortured ghosts. </blockquote>
     <p>.......Jacob Bronowski , Ascent of Man.</p>
+
+    <h2>These are from Jacob Bronouski's Ascent of Man.</h2>
     <div>
 
         <iframe width="450" height="250" src="https://www.youtube.com/embed/F2kiAF1GL9M" frameborder="0"
