--- a/templates/ascent-of-man.html
+++ b/templates/ascent-of-man.html
@@ -36,7 +36,9 @@
             background-color: antiquewhite;
         }
         iframe {
-            margin-right: 25px;
+            margin-top: 100px;
+            margin-right: 50px;
+            margin-left: 50px;
         }
 
         p {
